fixed home/about height on small devices

--- a/src/Components/home/About/About.scss
+++ b/src/Components/home/About/About.scss
@@ -14,6 +14,7 @@
         margin-top: 50px;
         padding-bottom: 50px;
         margin-bottom: 50px;
+        height: unset;
 
         .bioText {
             padding: 0 15px 0 20px;
